--- a/public/t1a13-json-Aden.html
+++ b/public/t1a13-json-Aden.html
@@ -102,7 +102,7 @@
 </head>
 <body>
 
-<h1>Random Animal Images, Math Problems & Pokémon Display</h1>
+<h1>t1a13-json-Aden.html</h1>
 
 <!-- Section for Animal Image Fetching -->
 <h2>Random Animal Images</h2>
