--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -1,28 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <title>Animal and Pokémon Demo</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f4;
             color: #333;
             padding: 20px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
         }
-
         h2 {
             text-align: center;
             color: #4CAF50;
         }
-
-        #container {
+        #container, #pokemonSection {
             max-width: 600px;
-            margin: auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 10px;
         }
-
         input[type="text"], input[type="number"], input[type="button"] {
             width: calc(100% - 20px);
             padding: 10px;
@@ -32,12 +36,6 @@
             font-size: 16px;
             transition: border-color 0.3s;
         }
-
-        input[type="text"]:focus, input[type="number"]:focus {
-            border-color: #45a049;
-            outline: none;
-        }
-
         input[type="button"] {
             background-color: #4CAF50;
             color: white;
@@ -45,47 +43,23 @@
             border: none;
             border-radius: 5px;
         }
-
-        input[type="button"]:hover {
-            background-color: #45a049;
-        }
-
-        #errorMessage {
-            color: red;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        #myDiv01 {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #cccccc;
-            border-radius: 5px;
-            background-color: #e8f5e9;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .animal-entry {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        .animal-entry, .pokemon-entry {
             padding: 5px;
             margin-bottom: 5px;
-            background: #dcedc8;
             border-radius: 5px;
         }
-
-        .animal-entry p {
-            margin: 0;
+        .pokemon-entry {
+            background: #dcedc8;
+        }
+        .pokemon-image {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
-
 <body>
     <div id="container">
         <h2>Animal Class Complex Demonstration</h2>
-
         <script>
             // Base class representing an Animal
             class MyAnimal {
@@ -114,14 +88,12 @@
                             <p>${this.myName} says: ${this.makeSound()}</p>
                         </div>`;
                 }
-            } // end class MyAnimal
+            }
 
-            // Extended classes for various animals
             class MyCat extends MyAnimal {
                 constructor(name, age) {
                     super(name, age, "house");
                 }
-
                 makeSound() {
                     return 'Meow!';
                 }
@@ -131,7 +103,6 @@
                 constructor(name, age) {
                     super(name, age, "house");
                 }
-
                 makeSound() {
                     return 'Woof!';
                 }
@@ -141,7 +112,6 @@
                 constructor(name, age) {
                     super(name, age, "sky");
                 }
-
                 makeSound() {
                     return 'Chirp!';
                 }
@@ -151,7 +121,6 @@
                 constructor(name, age) {
                     super(name, age, "water");
                 }
-
                 makeSound() {
                     return 'Glub!';
                 }
@@ -161,238 +130,29 @@
                 constructor(name, age) {
                     super(name, age, "meadow");
                 }
-
                 makeSound() {
                     return 'Squeak!';
                 }
             }
 
-            // Additional animals
-            class MyHorse extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "farm");
-                }
+            const validAnimals = ['Cat', 'Dog', 'Bird', 'Fish', 'Rabbit'];
 
-                makeSound() {
-                    return 'Neigh!';
-                }
-            }
-
-            class MyElephant extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "savannah");
-                }
-
-                makeSound() {
-                    return 'Trumpet!';
-                }
-            }
-
-            class MyLion extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "savannah");
-                }
-
-                makeSound() {
-                    return 'Roar!';
-                }
-            }
-
-            class MyTiger extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "jungle");
-                }
-
-                makeSound() {
-                    return 'Growl!';
-                }
-            }
-
-            class MyGiraffe extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "savannah");
-                }
-
-                makeSound() {
-                    return 'Hum!';
-                }
-            }
-
-            class MyZebra extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "savannah");
-                }
-
-                makeSound() {
-                    return 'Whinny!';
-                }
-            }
-
-            class MyPenguin extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "ice");
-                }
-
-                makeSound() {
-                    return 'Honk!';
-                }
-            }
-
-            class MyFrog extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "pond");
-                }
-
-                makeSound() {
-                    return 'Ribbit!';
-                }
-            }
-
-            class MySnake extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "forest");
-                }
-
-                makeSound() {
-                    return 'Hiss!';
-                }
-            }
-
-            class MyTortoise extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "land");
-                }
-
-                makeSound() {
-                    return '...';
-                }
-            }
-
-            class MyPanda extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "bamboo forest");
-                }
-
-                makeSound() {
-                    return 'Grr!';
-                }
-            }
-
-            class MyKangaroo extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "australian outback");
-                }
-
-                makeSound() {
-                    return 'Chuff!';
-                }
-            }
-
-            class MyKoala extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "eucalyptus trees");
-                }
-
-                makeSound() {
-                    return 'Snore!';
-                }
-            }
-
-            class MyOstrich extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "savannah");
-                }
-
-                makeSound() {
-                    return 'Boom!';
-                }
-            }
-
-            class MyEagle extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "mountains");
-                }
-
-                makeSound() {
-                    return 'Screech!';
-                }
-            }
-
-            class MyDolphin extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "ocean");
-                }
-
-                makeSound() {
-                    return 'Click!';
-                }
-            }
-
-            class MyShark extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "ocean");
-                }
-
-                makeSound() {
-                    return '...';
-                }
-            }
-
-            class MyOctopus extends MyAnimal {
-                constructor(name, age) {
-                    super(name, age, "ocean");
-                }
-
-                makeSound() {
-                    return '...';
-                }
-            }
-
-            // Valid animal types
-            const validAnimals = [
-                'Cat', 'Dog', 'Bird', 'Fish', 'Rabbit',
-                'Horse', 'Elephant', 'Lion', 'Tiger',
-                'Giraffe', 'Zebra', 'Penguin', 'Frog',
-                'Snake', 'Tortoise', 'Panda', 'Kangaroo',
-                'Koala', 'Ostrich', 'Eagle', 'Dolphin',
-                'Shark', 'Octopus'
-            ];
-
-            // Factory function to create an animal
-            function createAnimal(type, name, age) {
-                switch(type) {
+            const createAnimal = (type, name, age) => {
+                switch (type) {
                     case 'Cat': return new MyCat(name, age);
                     case 'Dog': return new MyDog(name, age);
                     case 'Bird': return new MyBird(name, age);
                     case 'Fish': return new MyFish(name, age);
                     case 'Rabbit': return new MyRabbit(name, age);
-                    case 'Horse': return new MyHorse(name, age);
-                    case 'Elephant': return new MyElephant(name, age);
-                    case 'Lion': return new MyLion(name, age);
-                    case 'Tiger': return new MyTiger(name, age);
-                    case 'Giraffe': return new MyGiraffe(name, age);
-                    case 'Zebra': return new MyZebra(name, age);
-                    case 'Penguin': return new MyPenguin(name, age);
-                    case 'Frog': return new MyFrog(name, age);
-                    case 'Snake': return new MySnake(name, age);
-                    case 'Tortoise': return new MyTortoise(name, age);
-                    case 'Panda': return new MyPanda(name, age);
-                    case 'Kangaroo': return new MyKangaroo(name, age);
-                    case 'Koala': return new MyKoala(name, age);
-                    case 'Ostrich': return new MyOstrich(name, age);
-                    case 'Eagle': return new MyEagle(name, age);
-                    case 'Dolphin': return new MyDolphin(name, age);
-                    case 'Shark': return new MyShark(name, age);
-                    case 'Octopus': return new MyOctopus(name, age);
                     default: return null;
                 }
             }
 
-            function resetErrorMessage() {
+            const resetErrorMessage = () => {
                 document.getElementById('errorMessage').innerHTML = '';
             }
 
-            function showErrorMessage() {
+            const showErrorMessage = () => {
                 const errorMessage = document.getElementById('errorMessage');
                 errorMessage.innerHTML = "Animal is not valid. Please enter one of the following: " + validAnimals.join(', ');
             }
@@ -406,22 +166,143 @@
             const name = document.getElementById('animalName').value;
             const age = document.getElementById('animalAge').value;
 
-            resetErrorMessage(); // Reset the error message
+            resetErrorMessage(); 
 
             if (type && name && age > 0) {
                 let animal = createAnimal(type, name, parseInt(age));
                 if (animal) {
                     animal.myShow();
                 } else {
-                    showErrorMessage(); // Show the error message
+                    showErrorMessage(); 
                 }
             } else {
-                showErrorMessage(); // Show the error message
+                showErrorMessage();
             }
         }"><br>
 
-        <div id="errorMessage"></div> <!-- Error message display -->
+        <div id="errorMessage"></div>
         <div id="myDiv01">...</div>
     </div>
+
+    <div id="pokemonSection">
+        <h2>Pokémon Generator</h2>
+        <input type="text" id="pokemonSearch" placeholder="Search Pokémon by name or ID">
+        <input type="button" value="Search" onClick="searchPokemon()"><br>
+        <input type="button" value="Generate Random Pokémon" onClick="showPokemon()"><br>
+        <div id="pokemonDisplay">Choose a Pokémon!</div>
+    </div>
+
+    <script>
+        let pokemons = [];
+        let currentPokemon = null; // Store current Pokémon for toggling shiny
+
+        const fetchPokemons = async (limit = 1025) => {
+            const promises = [];
+            for (let i = 1; i <= limit; i++) {
+                promises.push(fetch(`https://pokeapi.co/api/v2/pokemon/${i}`));
+            }
+            const responses = await Promise.all(promises);
+            for (const response of responses) {
+                const data = await response.json();
+                const speciesResponse = await fetch(data.species.url);
+                const speciesData = await speciesResponse.json();
+                const description = speciesData.flavor_text_entries.find(entry => entry.language.name === 'en').flavor_text;
+                const imageUrl = data.sprites.front_default; // Regular sprite
+                const shinyImageUrl = data.sprites.front_shiny; // Shiny sprite
+
+                pokemons.push({
+                    id: data.id,
+                    name: data.name,
+                    type: data.types.map(type => type.type.name).join(', '),
+                    hp: data.stats[0].base_stat,
+                    attack: data.stats[1].base_stat,
+                    defense: data.stats[2].base_stat,
+                    description: description.replace(/\n/g, ' '), // Clean up new lines
+                    imageUrl: imageUrl, // Regular image URL
+                    shinyImageUrl: shinyImageUrl // Shiny image URL
+                });
+            }
+            document.getElementById('pokemonDisplay').innerHTML = "Pokémon data loaded. You can now search or generate a Pokémon.";
+        };
+
+        const getRandomPokemon = () => {
+            const randomIndex = Math.floor(Math.random() * pokemons.length);
+            return pokemons[randomIndex];
+        };
+
+        const showPokemon = () => {
+            if (pokemons.length === 0) {
+                document.getElementById('pokemonDisplay').innerHTML = `<p>Loading Pokémon data...</p>`;
+                return;
+            }
+            currentPokemon = getRandomPokemon(); // Store the current Pokémon
+            displayPokemon(currentPokemon); // Display the current Pokémon
+        };
+
+        const displayPokemon = (pokemon) => {
+            document.getElementById('pokemonDisplay').innerHTML = `
+                <div class="pokemon-entry">
+                    <h3>${pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1)} (${pokemon.type})</h3>
+                    <img src="${pokemon.imageUrl}" alt="${pokemon.name}" class="pokemon-image" id="pokemonImage">
+                    <p><strong>HP:</strong> ${pokemon.hp}</p>
+                    <p><strong>Attack:</strong> ${pokemon.attack}</p>
+                    <p><strong>Defense:</strong> ${pokemon.defense}</p>
+                    <p><strong>Description:</strong> ${pokemon.description}</p>
+                    <input type="button" value="Toggle Shiny" onClick="toggleShiny()">
+                    <br>
+                    <input type="text" id="newPokemonName" placeholder="Change Pokémon name" 
+                        oninput="updatePokemonName(event)">
+                    <input type="number" id="newPokemonAge" placeholder="Set Pokémon age" min="0"
+                        oninput="updatePokemonAge(event)">
+                </div>`;
+        };
+
+        const toggleShiny = () => {
+            const imageElement = document.getElementById('pokemonImage');
+            if (imageElement.src === currentPokemon.imageUrl) {
+                imageElement.src = currentPokemon.shinyImageUrl; // Change to shiny
+            } else {
+                imageElement.src = currentPokemon.imageUrl; // Change back to regular
+            }
+        };
+
+        const updatePokemonName = (event) => {
+            const newName = event.target.value;
+            const nameHeader = document.querySelector('.pokemon-entry h3');
+            if (nameHeader && currentPokemon) {
+                nameHeader.textContent = `${newName.charAt(0).toUpperCase() + newName.slice(1)} (${currentPokemon.type})`;
+                currentPokemon.name = newName; // Optional: Update the name in currentPokemon object
+            }
+        };
+
+        const updatePokemonAge = (event) => {
+            const newAge = event.target.value;
+            const ageText = document.querySelector('.pokemon-entry p.age');
+            if (ageText) {
+                if (newAge) {
+                    ageText.textContent = `Age: ${newAge}`;
+                } else {
+                    ageText.textContent = ''; // Clear age if no value is entered
+                }
+            }
+        };
+
+        const searchPokemon = () => {
+            const searchTerm = document.getElementById('pokemonSearch').value.toLowerCase();
+            const foundPokemon = pokemons.find(pokemon => 
+                pokemon.name.toLowerCase() === searchTerm || pokemon.id === parseInt(searchTerm)
+            );
+
+            if (foundPokemon) {
+                currentPokemon = foundPokemon; // Store the found Pokémon
+                displayPokemon(foundPokemon); // Display found Pokémon
+            } else {
+                document.getElementById('pokemonDisplay').innerHTML = `<p>No Pokémon found with that name or ID.</p>`;
+            }
+        };
+
+        // Initially fetch Pokémon data (up to 1025 Pokémon)
+        fetchPokemons(1025); 
+    </script>
 </body>
 </html>
