--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom right, #a8c8ff, #e8d9f5); /* Cool background gradient */
+            background: linear-gradient(to bottom right, #ffcc00, #ff3300); /* Red and yellow gradient */
             color: #333;
             padding: 20px;
             display: flex;
@@ -35,13 +35,13 @@
             width: calc(100% - 20px);
             padding: 10px;
             margin: 10px 0;
-            border: 2px solid #4CAF50;
+            border: 2px solid #ff3300; /* Red border for input fields */
             border-radius: 5px;
             font-size: 16px;
             transition: border-color 0.3s;
         }
         input[type="button"] {
-            background-color: #4CAF50;
+            background-color: #ff3300; /* Red button */
             color: white;
             cursor: pointer;
             border: none;
@@ -53,7 +53,7 @@
             border-radius: 5px;
         }
         .pokemon-entry {
-            background: #dcedc8;
+            background: #ffe066; /* Light yellow for Pokémon entry */
         }
         .pokemon-image {
             max-width: 100%;
