--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -195,25 +195,34 @@
         <input type="button" value="Search" onClick="searchPokemon()"><br>
         <input type="button" value="Generate Random Pokémon" onClick="showPokemon()"><br>
         <div id="pokemonDisplay">Choose a Pokémon!</div>
+        <input type="button" id="formButton" value="Change Form" style="display:none;" onClick="changePokemonForm()">
     </div>
 
     <script>
         let pokemons = [];
-        let currentPokemon = null; // Store current Pokémon for toggling shiny
+        let currentPokemon = null; // Store current Pokémon for toggling shiny and forms
+        let currentFormIndex = 0; // Store current form index for toggling forms
 
         const fetchPokemons = async (limit = 1025) => {
-            const promises = [];
+            const requests = [];
             for (let i = 1; i <= limit; i++) {
-                promises.push(fetch(`https://pokeapi.co/api/v2/pokemon/${i}`));
+                requests.push(fetch(`https://pokeapi.co/api/v2/pokemon/${i}`));
             }
-            const responses = await Promise.all(promises);
+            const responses = await Promise.all(requests);
             for (const response of responses) {
                 const data = await response.json();
                 const speciesResponse = await fetch(data.species.url);
                 const speciesData = await speciesResponse.json();
+                
                 const description = speciesData.flavor_text_entries.find(entry => entry.language.name === 'en').flavor_text;
                 const imageUrl = data.sprites.front_default; // Regular sprite
                 const shinyImageUrl = data.sprites.front_shiny; // Shiny sprite
+                const forms = [];
+
+                // Check for alternate forms if available
+                if (data.forms.length > 1) {
+                    forms.push(...data.forms.map(form => form.name));
+                }
 
                 pokemons.push({
                     id: data.id,
@@ -222,9 +231,10 @@
                     hp: data.stats[0].base_stat,
                     attack: data.stats[1].base_stat,
                     defense: data.stats[2].base_stat,
-                    description: description.replace(/\n/g, ' '), // Clean up new lines
-                    imageUrl: imageUrl, // Regular image URL
-                    shinyImageUrl: shinyImageUrl // Shiny image URL
+                    description: description.replace(/\n/g, ' '),
+                    imageUrl: imageUrl,
+                    shinyImageUrl: shinyImageUrl,
+                    forms: forms.length > 0 ? forms : null // Store forms if available
                 });
             }
             document.getElementById('pokemonDisplay').innerHTML = "Pokémon data loaded. You can now search or generate a Pokémon.";
@@ -241,6 +251,7 @@
                 return;
             }
             currentPokemon = getRandomPokemon(); // Store the current Pokémon
+            currentFormIndex = 0; // Reset to first form
             displayPokemon(currentPokemon); // Display the current Pokémon
         };
 
@@ -255,6 +266,9 @@
                     <p><strong>Description:</strong> ${pokemon.description}</p>
                     <input type="button" value="Toggle Shiny" onClick="toggleShiny()">
                 </div>`;
+            
+            // Show form button if there are forms available
+            document.getElementById('formButton').style.display = pokemon.forms ? 'inline-block' : 'none';
         };
 
         const toggleShiny = () => {
@@ -266,6 +280,27 @@
             }
         };
 
+        const changePokemonForm = () => {
+            if (currentPokemon.forms) {
+                currentFormIndex = (currentFormIndex + 1) % currentPokemon.forms.length; // Cycle through forms
+                displayForm(currentPokemon.forms[currentFormIndex]);
+            }
+        };
+
+        const displayForm = async (formName) => {
+            const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${formName}`);
+            const data = await response.json();
+            const imageUrl = data.sprites.front_default;
+            const shinyImageUrl = data.sprites.front_shiny;
+
+            // Update the currentPokemon object with the new form data
+            currentPokemon.imageUrl = imageUrl; // Update to the new form's image URL
+            currentPokemon.shinyImageUrl = shinyImageUrl; // Update to the new form's shiny URL
+
+            // Redisplay the Pokémon with the new form
+            displayPokemon(currentPokemon);
+        };
+
         const searchPokemon = () => {
             const searchTerm = document.getElementById('pokemonSearch').value.toLowerCase();
             const foundPokemon = pokemons.find(pokemon => 
@@ -274,6 +309,7 @@
 
             if (foundPokemon) {
                 currentPokemon = foundPokemon; // Store the found Pokémon
+                currentFormIndex = 0; // Reset to first form
                 displayPokemon(foundPokemon); // Display found Pokémon
             } else {
                 document.getElementById('pokemonDisplay').innerHTML = `<p>No Pokémon found with that name or ID.</p>`;
