--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -220,16 +220,15 @@
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
         const megaSprites = {
-            "charizard": "mega-sprites-x/charizard.png",
-            "pidgeot": "mega-sprites-x/pidgeot.png",
-            "gengar": "mega-sprites-y/gengar.png",
-            "blastoise": "mega-sprites-y/blastoise.png",
-            "mewtwo": "mega-sprites-x/mewtwo.png" // Add more sprites as necessary
+            "charizard": "PokeMMO Mega Sprites - X/charizard.png",
+            "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
+            "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
+            "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
+            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png" // Add more sprites as necessary
         };
 
         const gigantamaxSprites = {
-            "pikachu": "path/to/gigantamax/pikachu.png",
-            // Fill out this object similarly for all Gigantamax forms as needed
+            "pikachu": "path/to/gigantamax/pikachu.png", // Update the actual path as needed
         };
 
         const fetchPokemons = async (limit = 1025) => {
