--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -219,13 +219,14 @@
         let pokemons = [];
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
-        const megaSprites = {
-            "charizard": "PokeMMO Mega Sprites - X/charizard.png",
-            "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
-            "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
-            "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
-            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png" // Add more sprites as necessary
-        };
+  
+         const megaSprites = {
+                 "charizard": "PokeMMO Mega Sprites - X/charizard.png",
+                 "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
+                 "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
+                 "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
+                 "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png"
+            };
 
         const gigantamaxSprites = {
             "pikachu": "path/to/gigantamax/pikachu.png", // Update the actual path as needed
