--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -219,14 +219,13 @@
         let pokemons = [];
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
-  
-         const megaSprites = {
-                 https://sd75-my.sharepoint.com/:i:/g/personal/1392554_learn75_ca/ET3AhZfP7nNPsp3C9WoqG5oBDadhz77ZFYiqWtEOG5vAxA?e=WB3P31
-                 "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
-                 "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
-                 "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
-                 "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png"
-            };
+        const megaSprites = {
+            "charizard": "https://sd75-my.sharepoint.com/:i:/g/personal/1392554_learn75_ca/ET3AhZfP7nNPsp3C9WoqG5oBDadhz77ZFYiqWtEOG5vAxA?e=WB3P31", // Update if this is a direct link to the image
+            "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
+            "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
+            "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
+            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png"
+        };
 
         const gigantamaxSprites = {
             "pikachu": "path/to/gigantamax/pikachu.png", // Update the actual path as needed
