--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -220,11 +220,11 @@
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
         const megaSprites = {
-            "charizard": "https://sd75-my.sharepoint.com/:i:/g/personal/1392554_learn75_ca/ET3AhZfP7nNPsp3C9WoqG5oBDadhz77ZFYiqWtEOG5vAxA?e=WB3P31", // Update if this is a direct link to the image
+            "charizard": "https://i.ibb.co/YDgKxW8/charizard-mega.png", // Replace with actual direct link for Mega Charizard
             "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
             "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
             "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
-            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png"
+            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png" // Add more sprites as necessary
         };
 
         const gigantamaxSprites = {
