--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -220,7 +220,7 @@
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
         const megaSprites = {
-            "charizard": "https://i.ibb.co/YDgKxW8/charizard-mega.png", // Replace with actual direct link for Mega Charizard
+            "charizard": "https://i.ibb.co/YDgKxW8/charizard-mega.png", // Replace with your actual Mega Charizard image link
             "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
             "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
             "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
