--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -219,13 +219,25 @@
         let pokemons = [];
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
-        const megaSprites = {
-            "charizard": "https://i.ibb.co/TP6YDST/Mega-Charzard.png", // Direct link to Mega Charizard image
-            "pidgeot": "PokeMMO Mega Sprites - X/pidgeot.png",
-            "gengar": "PokeMMO Mega Sprites - Y/gengar.png",
-            "blastoise": "PokeMMO Mega Sprites - Y/blastoise.png",
-            "mewtwo": "PokeMMO Mega Sprites - X/mewtwo.png" // Add more sprites as necessary
-        };
+       const megaSprites = {
+    "charizard": "https://i.ibb.co/TP6YDST/Mega-Charzard.png", // Mega Charizard
+    "banette": "https://i.ibb.co/VJJDCHV/362-front-s.gif", // Mega Banette
+    "gardevoir": "https://i.ibb.co/tCg2pzd/373-front-n.gif", // Mega Gardevoir
+    "gengar": "https://i.ibb.co/mThQmqL/376-front-n.gif", // Mega Gengar
+    "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif", // Mega Salamence
+    "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif", // Mega Lopunny
+    "gengar": "https://i.ibb.co/9q1yyvP/445-front-n.gif", // Mega Gengar
+    "mewtwo": "https://i.ibb.co/F0MRVbg/448-front-n.gif", // Mega Mewtwo
+    "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif", // Mega Pidgeot
+    "sharpedo": "https://i.ibb.co/LN2Vg51/475-front-n.gif", // Mega Sharpedo
+    "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif", // Mega Absol
+    "mew": "https://i.ibb.co/s55wF1W/150-front-n.gif", // Mega Mew
+    "lati@s": "https://i.ibb.co/fHy2KTZ/181-front-n.gif", // Mega Latias/Latios
+    "dusknoir": "https://i.ibb.co/pfmTZS3/208-front-n.gif", // Mega Dusknoir
+    "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif", // Mega Scizor
+    "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif", // Mega Sableye
+    // Add other mega images based on your requirements...
+};
 
         const gigantamaxSprites = {
             "pikachu": "path/to/gigantamax/pikachu.png", // Update the actual path as needed
