--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -220,24 +220,49 @@
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 
        const megaSprites = {
-    "charizard": "https://i.ibb.co/TP6YDST/Mega-Charzard.png", // Mega Charizard
-    "banette": "https://i.ibb.co/VJJDCHV/362-front-s.gif", // Mega Banette
-    "gardevoir": "https://i.ibb.co/tCg2pzd/373-front-n.gif", // Mega Gardevoir
-    "gengar": "https://i.ibb.co/mThQmqL/376-front-n.gif", // Mega Gengar
-    "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif", // Mega Salamence
-    "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif", // Mega Lopunny
-    "gengar": "https://i.ibb.co/9q1yyvP/445-front-n.gif", // Mega Gengar
-    "mewtwo": "https://i.ibb.co/F0MRVbg/448-front-n.gif", // Mega Mewtwo
-    "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif", // Mega Pidgeot
-    "sharpedo": "https://i.ibb.co/LN2Vg51/475-front-n.gif", // Mega Sharpedo
-    "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif", // Mega Absol
-    "mew": "https://i.ibb.co/s55wF1W/150-front-n.gif", // Mega Mew
-    "lati@s": "https://i.ibb.co/fHy2KTZ/181-front-n.gif", // Mega Latias/Latios
-    "dusknoir": "https://i.ibb.co/pfmTZS3/208-front-n.gif", // Mega Dusknoir
-    "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif", // Mega Scizor
-    "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif", // Mega Sableye
-    // Add other mega images based on your requirements...
-};
+   </head>
+<body>
+    <img id="pokemonImage" src="" alt="Mega Pokémon" style="width: 250px; height: 250px;"> <!-- Added sizes for clarity -->
+    <button onclick="setMegaSprite('gardevoir')">Show Mega Gardevoir</button>
+    <button onclick="setMegaSprite('gengar')">Show Mega Gengar</button>
+    <button onclick="setMegaSprite('charizard_x')">Show Mega Charizard X</button>
+    <button onclick="setMegaSprite('charizard_y')">Show Mega Charizard Y</button>
+    <button onclick="setMegaSprite('absol')">Show Mega Absol</button>
+    
+    <script>
+        // New megaSprites object
+        const megaSprites = {
+            "gardevoir": "https://i.ibb.co/VJJDCHV/362-front-s.gif", // Mega Gardevoir
+            "banette": "https://i.ibb.co/tCg2pzd/373-front-n.gif", // Mega Banette
+            "gengar": "https://i.ibb.co/mThQmqL/376-front-n.gif", // Mega Gengar
+            "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif", // Mega Salamence
+            "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif", // Mega Lopunny
+            "sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif", // Mega Sharpedo
+            "mewtwo": "https://i.ibb.co/F0MRVbg/448-front-n.gif", // Mega Mewtwo
+            "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif", // Mega Pidgeot
+            "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif", // Mega Absol
+            "mew": "https://i.ibb.co/s55wF1W/150-front-n.gif", // Mega Mew
+            "latios": "https://i.ibb.co/fHy2KTZ/181-front-n.gif", // Mega Latios
+            "latias": "https://i.ibb.co/pfmTZS3/208-front-n.gif", // Mega Latias
+            "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif", // Mega Scizor
+            "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif", // Mega Sableye
+            "dusknoir": "https://i.ibb.co/dQdgBty/229-front-n.gif", // Mega Dusknoir
+            "charizard_x": "https://i.ibb.co/xgJ2FH6/006-front-n.gif", // Mega Charizard X
+            "charizard_y": "https://i.ibb.co/006-front-n.gif", // Mega Charizard Y
+            "blastoise": "https://i.ibb.co/jbkwVYC/009-front-n.gif", // Mega Blastoise
+            "sceptile": "https://i.ibb.co/g4nRBc4/310-front-n.gif", // Mega Sceptile
+            "heracross": "https://i.ibb.co/2tbWVP1/065-front-n.gif", // Mega Heracross
+            "manectric": "https://i.ibb.co/NtjkSKD/080-front-n.gif", // Mega Manectric
+            // More entries can be added here...
+        };
+
+        function setMegaSprite(pokemonName) {
+            const imageElement = document.getElementById("pokemonImage");
+            imageElement.src = megaSprites[pokemonName] || "fallback_image_url"; // Include a fallback image URL here
+        }
+    </script>
+</body>
+</html>
 
         const gigantamaxSprites = {
             "pikachu": "path/to/gigantamax/pikachu.png", // Update the actual path as needed
