--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -230,8 +230,8 @@
             "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
             "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
             "mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
-            "latios": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
-            "latias": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
+            "Ampharos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
+            "Steelix": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
             "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
             "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif",
             "dusknoir": "https://i.ibb.co/dQdgBty/229-front-n.gif",
