--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -222,7 +222,7 @@
         const megaSprites = {
             "gardevoir": "https://i.ibb.co/VJJDCHV/362-front-s.gif",
             "banette": "https://i.ibb.co/tCg2pzd/373-front-n.gif",
-            "gengar": "https://i.ibb.co/mThQmqL/376-front-n.gif",
+            "Metagross": "https://i.ibb.co/mThQmqL/376-front-n.gif",
             "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
             "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif",
             "sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
