--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -219,27 +219,27 @@
         let pokemons = [];
         let currentPokemon = null; // Store current Pokémon for toggling shiny
 const megaSprites = {
-    "gardevoir": "https://i.ibb.co/VJJDCHV/362-front-s.gif",
-    "banette": "https://i.ibb.co/tCg2pzd/373-front-n.gif",
-    "metagross": "https://i.ibb.co/mThQmqL/376-front-n.gif", // Changed "Metagross" to "metagross"
-    "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
-    "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif",
-    "sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
-    "lucario": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
-    "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
-    "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
-    "mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
-    "ampharos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif", // Changed "Ampharos" to "ampharos"
-    "steelix": "https://i.ibb.co/pfmTZS3/208-front-n.gif", // Changed "Steelix" to "steelix"
-    "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
-    "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif",
-    "dusknoir": "https://i.ibb.co/dQdgBty/229-front-n.gif",
-    "charizard_x": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
-    "charizard_y": "https://i.ibb.co/006-front-n.gif",
-    "blastoise": "https://i.ibb.co/jbkwVYC/009-front-n.gif",
-    "sceptile": "https://i.ibb.co/g4nRBc4/310-front-n.gif",
-    "heracross": "https://i.ibb.co/2tbWVP1/065-front-n.gif",
-    "manectric": "https://i.ibb.co/NtjkSKD/080-front-n.gif",
+    "Gardevoir": "https://i.ibb.co/VJJDCHV/362-front-s.gif",
+    "Banette": "https://i.ibb.co/tCg2pzd/373-front-n.gif",
+    "Metagross": "https://i.ibb.co/mThQmqL/376-front-n.gif", // Changed "Metagross" to "metagross"
+    "Salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
+    "Lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif",
+    "Sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
+    "Lucario": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
+    "Pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
+    "Absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
+    "Mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
+    "Ampharos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif", // Changed "Ampharos" to "ampharos"
+    "Steelix": "https://i.ibb.co/pfmTZS3/208-front-n.gif", // Changed "Steelix" to "steelix"
+    "Scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
+    "Sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif",
+    "Dusknoir": "https://i.ibb.co/dQdgBty/229-front-n.gif",
+    "Charizard_x": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
+    "Charizard_y": "https://i.ibb.co/006-front-n.gif",
+    "Blastoise": "https://i.ibb.co/jbkwVYC/009-front-n.gif",
+    "Sceptile": "https://i.ibb.co/g4nRBc4/310-front-n.gif",
+    "Heracross": "https://i.ibb.co/2tbWVP1/065-front-n.gif",
+    "Manectric": "https://i.ibb.co/NtjkSKD/080-front-n.gif",
 };
 
         const gigantamaxSprites = {
